--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,3 +1,5 @@
+/*The css code was taken from the teacher's github, my style didn't work very actively*/
+
 form {
     max-width: 500px;
     margin: 0 auto;
