--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,19 @@
 html{
-  box-sizing: border-box;
+  box-sizing: border-box; /* Nastaví box-sizing pre celý dokument */
 }
 *{
   box-sizing: inherit;
-  margin: 0;
+  margin: 0; /* Odstráni okraje pre všetky prvky */
 } 
 body{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; /* Nastaví písmo pre telo dokumentu */
 }
-h1,h2,h3,p,a,li{
-  margin-bottom: 0.7em;
-}
-h4{
-  font-size: 50px;
-}
-h5{
-  font-size: 80px;
-}
-.thank{
-  font-size: 30px;
-}
-.gallery{
-  text-align: center;
-  font-size: 50px;
+h1,h2,p,a,li{
+  margin-bottom: 0.7em; /* Nastaví spodný okraj pre nadpisy, odstavce, odkazy a položky zoznamu */
 }
 a{
   text-decoration: none;
-  color: inherit;
+  color: inherit; /* Odstráni podčiarknutie z odkazov a zdedí farbu */
 }
 header{ 
   top:0;
@@ -38,75 +25,49 @@ header{
   justify-content: space-between;
   background-color: white;
   z-index: 1; 
-  max-width: 100%; 
+  max-width: 100%; /* Štýly pre horný záhlavie */
 }
 .main-menu li{
   display:inline;
-  margin-left: 20px;
+  margin-left: 20px; /* Položky hlavného menu sú usporiadané v jednom riadku s ľavým okrajom */
 }
 .main-menu li a{
   text-decoration: none;
   color:black;
-  font-size: 20px;
+  font-size: 20px; /* Štýly pre odkazy v hlavnom menu */
 }
 .hamburger{
-  display: none;
+  display: none; /* Skryje hamburger menu na veľkých obrazovkách */
 }
 
 .container{
-  padding:3% 10% 3% 10%;
-}
-.container-login{
-  padding:6.7% 10% 6.7% 10%;
-}
-.aa{
-  padding:3% 10% 3% 0%;  
-}
-.cont{
-  background-color: #e2dfdfa7;
+  padding:3% 10% 3% 10%; /* Vnútorné okraje kontajnera */
 }
 .row{
   display:flex;
   flex-direction: row;
   padding: 25px 0px;
-  gap:20px;   
-}
-.row_1{
-  display:flex;
-  flex-direction: row;
-  padding: 1px 0px;
-  gap:20px; 
+  gap:20px; /* Štýly pre riadky s prvkami usporiadanými vedľa seba */
 }
 .row .col-25{
-  width:25%;
+  width:25%; /* Šírka 25% pre stĺpec */
 }
 .row .col-50{
-  width:50%;
+  width:50%; /* Šírka 50% pre stĺpec */
 }
 .row .col-100{
-  width:100%;
+  width:100%; /* Šírka 100% pre stĺpec */
 }
 .text-center{
-  text-align:center;
+  text-align:center; /* Zarovnanie textu na stred */
 }
 .bottom_text{
-  font-size: 22px;
-}
-.who{
-  font-size: 30px;
-}
-.fact_1{
-  font-size: 50px;
-}
-.fact{
-  font-size: 30px;
-  margin-top: -35px;
+  font-size: 22px; /* Veľkosť písma pre triedu .bottom_text */
 }
 .photo{
   overflow: hidden;
   padding: 2rem 0;
-  text-align: center;
-  
+  text-align: center; /* Štýly pre galériu fotografií */
 }
 .photo .img{
   width: 100%;
@@ -114,78 +75,64 @@ header{
   height: 22rem;
   display: inline-block;
   margin: 1rem;
-  cursor: pointer;
+  cursor: pointer; /* Štýly pre obrázky v galérii */
 }
 .photo .img img{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform: .3s;
+  transform: .3s; /* Štýly pre obrázky */
 }
 .photo .img img:hover{
-  transform: scale(1.2);
-}
-.company{
-  font-size: 40px;
-  color: #9d9d9d;
-  text-align: center;
-}
-.facts_1{
-  margin-left: 200px;
-  display: block;
-  margin-top: -25px;
-}
-.bb{
-  margin-top: -55px;
-  margin-left: 10px;
+  transform: scale(1.2); /* Efekt zväčšenia pri prechode myšou */
 }
 .bg-dark{
-  background-color:rgb(25, 25, 25);
+  background-color:rgb(25, 25, 25); /* Tmavé pozadie */
 }
 .text-dark{
-  color:rgb(25, 25, 25);
+  color:rgb(25, 25, 25); /* Tmavý text */
 }
 .text-white{
-  color:white;
+  color:white; /* Biely text */
 }
 .text-center{
-  text-align:center;
+  text-align:center; /* Zarovnanie textu na stred */
 }
 .text-left{
-  text-align:left;
+  text-align:left; /* Zarovnanie textu vľavo */
 }
 .text-right{
-  text-align:right;
+  text-align:right; /* Zarovnanie textu vpravo */
 }
 @media (max-width:700px){
   main{
-      margin-top:0px;
+      margin-top:0px; /* Zrušenie horného okraja pre main na malých obrazovkách */
   }
   .row{
-      flex-direction: column;
+      flex-direction: column; /* Vertikálne usporiadanie prvkov v riadku */
   }
   .row .col-25,.col-50{
-      width: 100%;
+      width: 100%; /* Plná šírka stĺpcov na malých obrazovkách */
   }
   .main-menu{
-      display: none;
+      display: none; /* Skrytie hlavného menu */
   }
   .hamburger {
-      display: inline;
+      display: inline; /* Zobrazenie hamburger menu */
   }
   .main-header{
       position:relative;
-      top:0px;
+      top:0px; /* Polohovanie horného záhlavia */
   }
   .main-menu{
-      display: none;
+      display: none; /* Skrytie hlavného menu */
   }
   .hamburger {
-      display: inline;
+      display: inline; /* Zobrazenie hamburger menu */
   }
   .main-header{
       position:relative;
-      top:0px;
+      top:0px; /* Polohovanie horného záhlavia */
   }
   .main-menu.responsive {
       display: block;
@@ -195,14 +142,13 @@ header{
       top:40px;
       left:0px;
       padding-top:20px;
-      padding-bottom:20px;
+      padding-bottom:20px; /* Štýly pre hlavné menu v adaptívnom režime */
   }
   .main-menu.responsive li{
       display: block;
-      margin-left:0px;
+      margin-left:0px; /* Vertikálne usporiadanie položiek menu v adaptívnom režime */
   }  
 }
-
 
 
 
